--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,4 +1,4 @@
-<div class="w-12">
+<div class="w-12 h-12">
   <!--?xml version="1.0" encoding="UTF-8"?-->
   <svg id="Layer_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.14 54.14"
     ><defs
