--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -29,19 +29,19 @@ import designIcon from "../images/icons/design-icon.png";
               header="Front-End Development"
               text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
               icon={codeIcon}
-              classes="pr-6 md:w-1/2 lg:w-1/3 "
+              classes="md:pr-6 md:w-1/2 lg:w-1/3 "
             />
             <Card
               header="User-Experience Design"
               text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
               icon={designIcon}
-              classes="px-3 md:w-1/2 lg:w-1/3 "
+              classes="md:px-3 md:w-1/2 lg:w-1/3 "
             />
             <Card
               header="Data-Driven Optimization"
               text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
               icon={dataIcon}
-              classes="pl-6 md:w-1/2 lg:w-1/3 "
+              classes="lg:pl-6 md:w-1/2 lg:w-1/3 "
             />
           </div>
         </div>
