--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -19,13 +19,13 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           <Position
             title="Front-End Developer & UX/UI Specialist"
             location="The Luminary Agency"
-            years="2020 - Present"
+            years="2021 - Present (Part Time)"
             description="Developed responsive web interfaces using WordPress, Webflow, Squarespace, and HTML/CSS/JavaScript. Created UI wireframe designs with Figma, Relume, and Balsamiq, improving user experience and navigability. Collaborated on brand aesthetics with the design team, ensuring cohesive visual strategies across platforms. Achievements include 1,000% traffic increase, 150% higher conversion rates, and 15% lower bounce rates."
           />
           <Position
             title="Front-End Developer & Product Strategist"
             location="Higher Self Yoga"
-            years="2020 - year"
+            years="2020 - Present (Part Time)"
             description="Designed and implemented a product and marketing strategy that grew user traffic from 1,000 to 25,000 monthly and expanded our email list from 2,000 to 16,000. Led a team in migrating from WordPress to Webflow to enhance design and functionality, which increased site speed by 50%, reduced bounce rates by 5%, and increased conversions by 25%. Developed a new community platform with optimized user flow and onboarding, integrating features like personalized dashboards, a tagged forum, and real-time messaging."
           />
         </div>
@@ -74,7 +74,9 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           </div>
         </div>
       </div>
-      <div class="flex items-center justify-center mt-8 mb-8 gap-4">
+      <div
+        class="flex items-center justify-center mt-8 mb-8 gap-4 flex-col md:flex-row"
+      >
         <Button text="Full Resume" type="tertiary" />
         <Button text="LinkedIn" type="secondary" />
       </div>
