--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -18,7 +18,6 @@ import H3 from "../components//H3.astro";
       <!-- Hero Section -->
 
       <Nav title={SITE_TITLE} />
-      <div class="h-12"></div>
 
       <section class="flex-grow">
         <div class="container container-large">
@@ -39,8 +38,8 @@ import H3 from "../components//H3.astro";
                 <div class="max-w-lg">
                   <p>
                     Whether you're looking for a full-stack developer, a UX/UI
-                    specialist, or a product strategist, I'd love to hear from
-                    you.
+                    specialist, a product strategist, or all of the above, I'd
+                    love to hear from you.
                   </p>
                 </div>
               </div>
