--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,8 +75,8 @@ main {
 
 /* text and header stylings */
 h1 {
-  font-size: 1.875rem /* 30px */;
-  line-height: 3rem /* 36px */;
+  font-size: 1.875rem;
+  line-height: 2.5rem;
 }
 
 @media (min-width: 1024px) {
