--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,7 +30,7 @@ import { Image } from "astro:assets";
             <Button text="Get in Touch" type="primary" link="/" />
             <Button text="See My Work" type="secondary" link="/" />
           </div>
-          <div class="text-sm uppercase underline flex flex-wrap gap-5">
+          <div class="text-sm uppercase underline flex flex-wrap gap-5 mt-1">
             <h6>Full-Stack Development</h6>
             <h6>UX/UI</h6>
             <h6>Product Strategy</h6>
