--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -2,10 +2,10 @@
 import Button from "../components/Button.astro";
 ---
 
-<section>
+<section class="">
   <div class="bg-purple min-h-96">
     <div class="container container-large">
-      <div class="padding-global">
+      <div class="padding-global relative overflow-visible">
         <div class="grid grid-cols-5 gap-8 py-16">
           <div
             class="col-span-5 lg:col-span-2 bg-purple flex items-center md:px-8 lg:px-0"
@@ -21,7 +21,7 @@ import Button from "../components/Button.astro";
               </h2>
               <div class="mb-4">
                 <p>
-                  As a UX Engineer, my domain spans the realms of design,
+                  As a UX Engineer, I work across the realms of design,
                   development, and product strategy. I specialize in steering
                   new products from the initial concept stage through to
                   completion, as well as refining existing products with
@@ -35,66 +35,22 @@ import Button from "../components/Button.astro";
                 <p>
                   My process begins by using my UX design intuition to spot
                   areas of friction, confusion, and overlooked opportunities.
-                  Following this, I delve into the data, analyzing metrics such
-                  as churn rates, funnel drop-offs, and conversion and bounce
-                  rates, to validate my initial observations and form new
-                  hypotheses. Armed with these insights, I personally implement
-                  the necessary changes to the front end, making sure that all
-                  KPIs are tracked properly for use in performance
-                  retrospectives and future optimizations.
+                  Next, I delve deeply into the data, analyzing user engagement
+                  metrics and conversion rates to validate my initial
+                  observations and form new hypotheses. Armed with these
+                  insights, I propose and then personally implement the
+                  necessary changes to the front end, making sure that all KPIs
+                  are tracked properly for use in performance retrospectives and
+                  future optimizations.
                 </p>
 
                 <p>
-                  This holistic approach not only enhances the user experience
-                  but also drives tangible business results, ensuring that each
-                  product not only meets but exceeds both user expectations and
-                  company goals.
+                  This comprehensive strategy not only elevates user experience
+                  but also yields concrete business outcomes, guaranteeing that
+                  every product surpasses both customer expectations and
+                  organizational objectives.
                 </p>
-                <!-- <p>
-                  In the digital landscape, clean, scalable, and robust code is
-                  the cornerstone for any successful product. But even though
-                  code lays an essential foundation, <strong
-                    >success is equally determined by how a product makes its
-                    users feel.</strong
-                  > Does it anticpate user needs? Does it make a user feel valued
-                  and understood?
-                </p>
-                <p>
-                  This is where my contribution becomes pivotal. My specialty
-                  lies in leveraging my deep understanding of user behavior,
-                  front-end development, and web analytics to steer the design
-                  and development process, ensuring that the final product
-                  doesn't just meet technical benchmarks but also delivers an
-                  experience intuitively aligned with user expectations and
-                  aspirations.
-                </p> -->
-
-                <!-- <p>
-                In the digital landscape, clean, scalable, and robust code is
-                the foundation for any successful product. By blending
-                established best practices with emerging technologies, we ensure
-                a product that is both reliable and cutting-edge. However, a
-                foundation by itself is not a building, but rather the mere
-                potential of one.
-              </p>
-              <p>
-                The success of a digital product is ultimately determined not by
-                its code base, but in how it makes the user feel. A product is
-                set apart from its competitors is one that makes its user feel
-                valued and understood, one that offers anticpates user needs and
-                offers solutions before the user even realizes they need them.
-              </p>
-              <p>
-                This is where my contribution becomes pivotal. My specialty lies
-                in understanding user behavior and pain points, a skill honed
-                through a decade of diverse web experience. I leverage this deep
-                understanding of the user to steer the design and development
-                process, ensuring that the final product doesn't just meet
-                technical benchmarks but also delivers an experience intuitively
-                aligned with user expectations and aspirations.
-              </p> -->
               </div>
-              <div><Button text="Get in Touch" link="/contact" /></div>
             </div>
           </div>
         </div>
