--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -9,17 +9,20 @@ import designIcon from "../images/icons/design-icon.png";
   <div class="container container-large">
     <div class="padding-global py-36">
       <div>
-        <h2 class="text-center mb-8">My Skills</h2>
+        <h2 class="text-center mb-8 leading-[3.3rem]">
+          I use a holistic skillset of engineering, user behavior, <br /> and product
+          strategy to turn ideas into reality.
+        </h2>
         <!-- <p class="text-center text-xl">
         With over a <strong>decade</strong> of experience in digital product
         development, I create seamless experiences that let users achieve their
         goals without friction, leading to higher customer satisfaction and
         increased sales.
       </p> -->
-        <p class="text-center">
+        <!-- <p class="text-center">
           With a holistic skillset of engineering, user behavior, and product
           strategy, <strong>I turn thoughts into tangible realities.</strong>
-        </p>
+        </p> -->
         <div class="mt-4"></div>
         <!-- 3 Boxes -->
         <div>
