--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import { getImage } from "astro:assets";
-import gradientBackground from "../images/backgrounds/gradient-2.png";
+// import gradientBackground from "../images/backgrounds/gradient.png";
+import gradientBackground from "../images/backgrounds/gradient-1600.png";
 
 import BaseHead from "../components/BaseHead.astro";
 import Nav from "../components/Nav.astro";
