--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -114,6 +114,7 @@ h5 {
 }
 
 h6 {
+  font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   font-size: 0.85rem;
   text-transform: uppercase;
