--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,7 +10,7 @@ const {
 };
 
 const globalClasses =
-  "button btn inline-flex items-center justify-center px-6 md:px-20  rounded-full text-lg";
+  "button btn inline-flex items-center justify-center px-10 md:px-20  rounded-full text-lg";
 
 type ButtonType = "primary" | "secondary" | "tertiary" | "link";
 
@@ -52,6 +52,7 @@ const buttonClasses = `button ${globalClasses} ${typeClasses[type]}`;
     border-radius: 2em;
     content: "";
     mix-blend-mode: color-burn;
+    pointer-events: none;
   }
 
   /* .button-text {
