--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -25,8 +25,10 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
     >
       <Image src={icon} alt="icon" width="300" height="250" />
     </div>
-    <div class="mb-4"><H3 centered="True" header={header} maxWidth="14" /></div>
-    <span class="text-center">{text}</span>
+    <div class="mb-4">
+      <H3 centered="True" header={header} maxWidth="14" classes="text-lg" />
+    </div>
+    <span class="text-center leading-[1.6rem]">{text}</span>
   </div>
 </div>
 
