--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -60,7 +60,9 @@ import Icons from "./Icons.astro";
       class="inset-0 bg-black bg-opacity-90 hidden z-1 h-screen"
     >
       <!-- Mobile Menu Content -->
-      <div class="text-white flex items-center justify-center h-full flex-col">
+      <div
+        class="text-white flex items-center justify-center h-full flex-col gap-4"
+      >
         <HeaderLink href="/" class="block text-xl px-4 py-2">Home</HeaderLink>
         <HeaderLink href="/#portfolio" class="block text-xl px-4 py-2">
           Portfolio
@@ -71,72 +73,73 @@ import Icons from "./Icons.astro";
         <HeaderLink href="/contact" class="block text-xl px-4 py-2">
           Contact
         </HeaderLink>
-        <div class="h-4"></div>
+        <div class="h-2"></div>
         <Icons />
       </div>
     </div>
-    <div class="h-20 md:h-36"></div>
-
-    <style>
-      header {
-        background-color: rgba(0, 0, 0, 0);
-        transition: background-color 0.1s;
-        border-bottom: 1px solid rgba(255, 255, 255, 0);
-        box-shadow: 0 2px 8px rgba(var(--black), 5%);
-      }
-      h2 {
-        margin: 0;
-        font-size: 1em;
-      }
-
-      h2 a,
-      h2 a.active {
-        text-decoration: none;
-      }
-      nav a {
-        padding: 0.5em 1em;
-      }
-
-      @media (max-width: 768px) {
-        .social-links {
-          display: none;
-        }
-        nav a {
-          padding: 0.5em 0.5em;
-        }
-      }
-    </style>
-
-    <script>
-      const header = document.querySelector("header");
-
-      window.addEventListener("scroll", () => {
-        const scrollPosition = window.scrollY;
-        const opacity = Math.min(scrollPosition / 250, 1);
-        if (header && window.innerWidth >= 768) {
-          // Check for md screen size and above
-          header.style.backgroundColor = `rgba(0, 0, 0, ${opacity})`;
-          header.style.borderColor = `rgba(255, 255, 255, ${opacity})`;
-        } else if (header) {
-          header.style.backgroundColor = ""; // Reset to default for smaller screens
-          header.style.borderColor = "";
-        }
-      });
-
-      const hamburgerBtn = document.getElementById("hamburger-btn");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      if (hamburgerBtn && mobileMenu) {
-        hamburgerBtn.addEventListener("click", () => {
-          mobileMenu.classList.toggle("hidden");
-        });
-      }
-
-      if (mobileMenu) {
-        mobileMenu.addEventListener("click", () => {
-          mobileMenu.classList.add("hidden");
-        });
-      }
-    </script>
   </nav>
 </header>
+
+<div class="h-20 md:h-36"></div>
+
+<style>
+  header {
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 0.1s;
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
+    box-shadow: 0 2px 8px rgba(var(--black), 5%);
+  }
+  h2 {
+    margin: 0;
+    font-size: 1em;
+  }
+
+  h2 a,
+  h2 a.active {
+    text-decoration: none;
+  }
+  nav a {
+    padding: 0.5em 1em;
+  }
+
+  @media (max-width: 768px) {
+    .social-links {
+      display: none;
+    }
+    nav a {
+      padding: 0.5em 0.5em;
+    }
+  }
+</style>
+
+<script>
+  const header = document.querySelector("header");
+
+  window.addEventListener("scroll", () => {
+    const scrollPosition = window.scrollY;
+    const opacity = Math.min(scrollPosition / 250, 1);
+    if (header && window.innerWidth >= 768) {
+      // Check for md screen size and above
+      header.style.backgroundColor = `rgba(0, 0, 0, ${opacity})`;
+      header.style.borderColor = `rgba(255, 255, 255, ${opacity})`;
+    } else if (header) {
+      header.style.backgroundColor = ""; // Reset to default for smaller screens
+      header.style.borderColor = "";
+    }
+  });
+
+  const hamburgerBtn = document.getElementById("hamburger-btn");
+  const mobileMenu = document.getElementById("mobile-menu");
+
+  if (hamburgerBtn && mobileMenu) {
+    hamburgerBtn.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+  }
+
+  if (mobileMenu) {
+    mobileMenu.addEventListener("click", () => {
+      mobileMenu.classList.add("hidden");
+    });
+  }
+</script>
