--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -12,8 +12,8 @@ import Button from "./Button.astro";
     <div class="padding-global py-36">
       <div class="padding-extra">
         <div>
-          <h2 class="text-center mb-1">Don't just take it from me.</h2>
-          <h4 class="text-center text-lg mb-10">
+          <h2 class="text-center mb-3">Don't just take it from me.</h2>
+          <h4 class="text-center text-lg mb-10 font-bold">
             Here's what my clients have had to say.
           </h4>
           <div
