fixed h3 heading issues, changed all images to astro Image tags, copy tweaks

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,35 +1,50 @@
 ---
 import H3 from "../components/H3.astro";
 import { Image } from "astro:assets";
+import gradientBackground from "../images/backgrounds/gradient-2000.png";
+import { getImage } from "astro:assets";
 
-export interface Props {
+const { header, title, text, icon, link, classes, rounded } = Astro.props as {
   header: string;
+  title: string;
   text: string;
   icon: any;
+  link: string;
   classes?: string;
   rounded?: boolean;
-}
+};
 
-const { header, text, classes, icon, rounded } = Astro.props as Props;
+const optimizedBackground = await getImage({
+  src: gradientBackground,
+});
 
 const imageRounded = rounded ? "rounded-full" : "rounded-xl";
 ---
 
-<!-- Card HTML structure -->
-<div class=`py-6 ${
+<div class=`${
   classes ?? ""
 }`>
-  <div class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full">
-    <div
-      class=`max-w-36 flex items-center w-full mb-4 ${imageRounded} overflow-hidden`
-    >
-      <Image src={icon} alt="icon" width="300" height="250" />
-    </div>
-    <div class="mb-4">
-      <H3 centered="True" header={header} maxWidth="14" classes="text-lg" />
-    </div>
-    <span class="text-center leading-[1.6rem]">{text}</span>
-  </div>
+  <a href={link}>
+    <div class="py-6">
+      <div
+        style={`background-image: url('${optimizedBackground.src}'); background-size: cover; background-repeat: no-repeat; background-position: bottom left;`}
+        class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full"
+      >
+        <div
+          class=`max-w-36 flex items-center w-full mb-4 ${imageRounded} overflow-hidden`
+        >
+          <Image src={icon} alt="icon" width="300" height="250" />
+        </div>
+        <div>
+          <H3 centered="True" header={header} />
+        </div>
+        <div class="mb-2">
+          <span class="text-base">{title}</span>
+        </div>
+        <span class="text-center leading-[1.6rem]">{text}</span>
+      </div>
+    </div></a
+  >
 </div>
 
 <style>
@@ -37,10 +52,6 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
   }
   .card {
     position: relative;
-    background-image: url("src/images/backgrounds/gradient.png");
-    background-size: cover;
-    background-position: bottom left;
-    background-repeat: no-repeat;
     border-radius: 15px;
     z-index: 1;
   }
