--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -41,7 +41,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
               title="Inbound Marketing & UX Specialist"
               location="Cruiseline.com"
               years="2015 - 2018"
-              description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which lead to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating $470K annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
+              description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which lead to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
             />
           </div>
         </div>
