--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,21 +17,23 @@ import { Image } from "astro:assets";
           id="header-text"
         >
           <h1>
-            Hi! I'm Thomas. <br /> I bring websites & digital applications to life.
+            Hi! I'm Thomas. <br /> I make websites & digital applications <em
+              >better</em
+            >.
           </h1>
 
           <p>
-            With over a decade of experience in digital product design and
-            development, I create seamless experiences that empower users to
-            achieve their goals without friction, leading to higher customer
-            satisfaction and increased sales.
+            As a UX Engineer with over a decade of experience in digital product
+            design and development, I create seamless experiences that empower
+            users to achieve their goals without friction, leading to higher
+            customer satisfaction and increased sales.
           </p>
           <div class="flex flex-wrap gap-4">
             <Button text="Get in Touch" type="primary" link="/" />
             <Button text="See My Work" type="secondary" link="/" />
           </div>
           <div class="text-sm uppercase underline flex flex-wrap gap-5 mt-1">
-            <h6>Full-Stack Development</h6>
+            <h6>Front-End Development</h6>
             <h6>UX/UI</h6>
             <h6>Product Strategy</h6>
             <h6>Data Analysis</h6>
