--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import Button from "./Button.astro";
+import projectImage from "../images/projects/planet-facts.png";
 
 export interface Props {
   header: string;
@@ -16,10 +17,12 @@ const { header, image, tags, text, link } = Astro.props as Props;
 <div class="bg-black rounded-xl p-10">
   <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
     <div class="lg:col-span-5 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]">
-      <img
-        src="src/images/projects/planet-facts.png"
+      <Image
+        src={projectImage}
         alt=""
         class="rounded-lg"
+        width="600"
+        height="450"
       />
     </div>
     <div class="lg:col-span-7 flex flex-col gap-4">
