--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -9,16 +9,21 @@ const { centered, header, maxWidth, classes } = Astro.props as {
 const center = centered ? "text-center" : "";
 ---
 
-<div class="flex flex-row">
+<!-- <div class="flex flex-row">
   <div class="text-purple text-2xl mt-[-2px] flex flex-col justify-center">
     <div>&lt;</div>
   </div>
-  <div class={`max-w-[${maxWidth}rem] px-2`}>
-    <h3 class={`${center} ${classes}`}>{header}</h3>
+  <div class={`max-w-[${maxWidth}rem] px-2 `}>
+    <h3 class={`${center} ${classes} text-lg `}>{header}</h3>
   </div>
   <div class="text-purple text-2xl mt-[-2px] flex flex-col justify-center">
     <div>&gt;</div>
   </div>
+</div> -->
+<div class="flex items-center justify-center gap-2">
+  <span class="text-purple text-2xl mb-[2px]">&lt;</span>
+  <h3 class="text-lg whitespace-nowrap overflow-hidden">{header}</h3>
+  <span class="text-purple text-2xl mb-[2px]">&gt;</span>
 </div>
 
 <style>
