--- a/src/components/Icons.astro
+++ b/src/components/Icons.astro
@@ -1,11 +1,22 @@
 <div class="flex flex-row gap-4">
   <div>
-    <a href="https://m.webtoo.ls/@astro" target="_blank">
-      <img src="src/images/icons/linkedin.svg" />
+    <a href="https://www.linkedin.com/in/thomasfaddegon/" target="_blank">
+      <svg
+        fill="none"
+        height="33"
+        viewBox="0 0 32 32"
+        width="33"
+        xmlns="http://www.w3.org/2000/svg"
+        ><path
+          clip-rule="evenodd"
+          d="m0 16c0-8.83656 7.16344-16 16-16 8.8366 0 16 7.16344 16 16 0 8.8366-7.1634 16-16 16-8.83656 0-16-7.1634-16-16zm8.2-2.7v10.7h3.4v-10.7zm-.2-3.4c0 1.1.8 1.9 1.9 1.9s1.9-.8 1.9-1.9-.8-1.9-1.9-1.9c-1 0-1.9.8-1.9 1.9zm12.6 14.1h3.2v-6.6c0-3.3-2-4.4-3.9-4.4-1.7 0-2.9 1.1-3.2 1.8v-1.5h-3.2v10.7h3.4v-5.7c0-1.5 1-2.3 2-2.3s1.7.5 1.7 2.2z"
+          fill="#fff"
+          fill-rule="evenodd"></path></svg
+      >
     </a>
   </div>
   <div>
-    <a href="https://github.com/withastro/astro" target="_blank">
+    <a href="https://github.com/thomasfaddegon" target="_blank">
       <svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
         ><path
           fill="currentColor"
