--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -13,7 +13,7 @@ const { title, location, years, description } = Astro.props as Props;
 
 <div class="w-full lg:w-1/2">
   <div class="flex flex-col gap-1">
-    <div class="">
+    <div class="flex flex-start">
       <H3 header={title} classes="text-lg font-bold" />
     </div>
     <div><span class="font-bold">{location}</span></div>
