--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -9,10 +9,13 @@ import designIcon from "../images/icons/design-icon.png";
   <div class="container container-large">
     <div class="padding-global py-36">
       <div>
-        <h2 class="text-center mb-8 leading-[3.3rem]">
-          I use a holistic skillset of engineering, user behavior, <br /> and product
-          strategy to turn ideas into reality.
-        </h2>
+        <div class="flex justify-center">
+          <h2 class="text-center mb-8 max-w-5xl">
+            I use a holistic skillset of engineering, user behavior, and product
+            strategy to polish ideas to perfection.
+          </h2>
+        </div>
+
         <!-- <p class="text-center text-xl">
         With over a <strong>decade</strong> of experience in digital product
         development, I create seamless experiences that let users achieve their
@@ -25,26 +28,28 @@ import designIcon from "../images/icons/design-icon.png";
         </p> -->
         <div class="mt-4"></div>
         <!-- 3 Boxes -->
-        <div>
+        <div class="flex items-center justify-center">
           <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12"> -->
-          <div class="flex flex-row justify-center flex-wrap padding-extra">
+          <div
+            class="flex flex-col items-center justify-center md:flex-row md:flex-wrap padding-extra max-w-2xl lg:max-w-none w-full"
+          >
             <Card
               header="Front-End Development"
               text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
               icon={codeIcon}
-              classes="md:pr-6 md:w-1/2 lg:w-1/3 "
+              classes="md:pr-6 lg:w-1/2 xl:w-1/3 "
             />
             <Card
               header="User-Experience Design"
               text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
               icon={designIcon}
-              classes="md:px-3 md:w-1/2 lg:w-1/3 "
+              classes="md:px-3 lg:w-1/2 xl:w-1/3 "
             />
             <Card
               header="Data-Driven Optimization"
               text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
               icon={dataIcon}
-              classes="lg:pl-6 md:w-1/2 lg:w-1/3 "
+              classes="lg:pl-6 lg:w-1/2 xl:w-1/3 "
             />
           </div>
         </div>
