--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,20 +75,27 @@ main {
 
 /* text and header stylings */
 h1 {
-  font-size: 1.875rem;
-  line-height: 2.5rem;
+  font-size: 3rem;
+  line-height: 3.25rem;
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 1024px) {
   h1 {
-    font-size: 3rem;
-    line-height: 3.25rem;
+    font-size: 2rem;
+    line-height: 2.5rem;
   }
 }
 
 h2 {
   font-size: 2.5rem;
   line-height: 3rem;
+}
+
+@media (max-width: 1024px) {
+  h2 {
+    font-size: 1.75rem;
+    line-height: 2.25rem;
+  }
 }
 
 h3 {
