fixed broken links

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -77,8 +77,12 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
       <div
         class="flex items-center justify-center mt-8 mb-8 gap-4 flex-col md:flex-row"
       >
-        <Button text="Full Resume" type="tertiary" />
-        <Button text="LinkedIn" type="secondary" />
+        <Button text="Get in Touch" type="tertiary" link="/contact" />
+        <Button
+          text="LinkedIn"
+          type="secondary"
+          link="https://www.linkedin.com/in/thomasfaddegon/"
+        />
       </div>
     </div>
   </div>
