--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,8 +29,8 @@ import { Image } from "astro:assets";
             customer satisfaction and increased sales.
           </p>
           <div class="flex flex-wrap gap-4">
-            <Button text="Get in Touch" type="primary" link="/" />
-            <Button text="See My Work" type="secondary" link="/" />
+            <Button text="Get in Touch" type="primary" link="/contact" />
+            <Button text="See My Work" type="secondary" link="#portfolio" />
           </div>
           <div class="text-sm uppercase underline flex flex-wrap gap-5 mt-1">
             <h6>Front-End Development</h6>
