--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -29,12 +29,12 @@ import graphic from "../images/graphics/graphic-1.webp";
               </h2>
               <div class="mb-4">
                 <p>
-                  As a UX Engineer, I work across the realms of design,
+                  As a UX Engineer, my work spans the realms of design,
                   development, and product strategy. I specialize in steering
-                  new products from the initial concept stage through to
-                  completion, as well as refining existing products with
-                  data-driven insights. The experience of the user lies at the
-                  heart of all my recommendations, as <strong
+                  new creations from the initial concept stage through to
+                  completion, as well as refining existing products with best
+                  practices and data-driven insights. The experience of the user
+                  lies at the heart of all my recommendations, as <strong
                     >the success of a product is often determined not by the
                     code, but by how it makes its users feel.</strong
                   >
@@ -59,7 +59,7 @@ import graphic from "../images/graphics/graphic-1.webp";
                   organizational objectives.
                 </p>
                 <div class="mt-8">
-                  <Button href="/contact" type="primary" text="Get in Touch" />
+                  <Button link="/contact" type="primary" text="Get in Touch" />
                 </div>
               </div>
             </div>
