--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -37,7 +37,7 @@ import H3 from "../components//H3.astro";
                 <h4>Let's stay in touch.</h4>
                 <div class="max-w-lg">
                   <p>
-                    Whether you're looking for a full-stack developer, a UX/UI
+                    Whether you're looking for a front-end developer, a UX/UI
                     specialist, a product strategist, or all of the above, I'd
                     love to hear from you.
                   </p>
@@ -101,7 +101,8 @@ import H3 from "../components//H3.astro";
                     <label
                       for="message"
                       class="block text-sm font-medium text-gray-300"
-                      ><H3 header="Message" /></label>
+                      ><H3 header="Message" /></label
+                    >
                   </div>
                   <textarea
                     name="message"
